优化课程板块

--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -155,6 +155,10 @@
       "name": "Course Name",
       "dept": "Department"
     },
+    "course": {
+      "viewReviews": "View course reviews",
+      "viewResources": "View course resources"
+    },
     "states": {
       "loading": "Loading...",
       "noCourses": "No courses available",
