--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -176,6 +176,8 @@
       "downloadFailed": "下载失败",
       "favorite": "收藏",
       "unfavorite": "取消收藏",
+      "like": "点赞",
+      "unlike": "取消点赞",
       "viewDetail": "查看详情"
     },
     "tabs": {
@@ -187,11 +189,42 @@
       "viewReviews": "查看课程评价",
       "viewResources": "查看课程资源"
     },
+    "review": {
+      "addReview": "发布课评",
+      "viewDetail": "查看详情",
+      "noReviews": "该课程暂无课评",
+      "noTitle": "无标题",
+      "title": "标题",
+      "titlePlaceholder": "请输入课评标题",
+      "titleRequired": "请输入课评标题",
+      "content": "课评内容",
+      "contentPlaceholder": "请输入课评内容",
+      "contentRequired": "请输入课评内容",
+      "instructorRequired": "请输入任课老师",
+      "rating": "评分",
+      "ratingRequired": "请选择评分",
+      "termRequired": "请选择开课时间",
+      "createSuccess": "课评发布成功",
+      "createFailed": "课评发布失败",
+      "reply": "回复",
+      "replyPlaceholder": "写下你的回复...",
+      "comments": "回复",
+      "noComments": "暂无回复",
+      "commentRequired": "请输入回复内容",
+      "commentSuccess": "回复成功",
+      "commentFailed": "回复失败",
+      "cancel": "取消",
+      "submit": "发布",
+      "anonymous": "匿名用户",
+      "dislike": "点踩",
+      "undislike": "取消点踩"
+    },
     "states": {
       "loading": "加载中...",
       "noCourses": "暂无课程",
       "networkError": "网络错误",
-      "loadFailed": "加载失败"
+      "loadFailed": "加载失败",
+      "submitting": "提交中..."
     },
     "uncategorized": "未分类"
   },
